--- a/AndBible/res/values-ky/strings.xml
+++ b/AndBible/res/values-ky/strings.xml
@@ -4,12 +4,12 @@
   <!--Startup & Help-->
   <string name="splash_top_text">\n\"Ошондо Кудай: \'Жарык болсун!” – деди.\' Жарык пайда болду.\"\nБашталыш 1:3</string>
   <string name="help_text">Тууралоого жана иштемге кирүү үчүн Иштизмеге кириңиз. Кийинки же мурунку бөлүмгө өтүү үчүн трэкболду тегеретиңиз же бармагыңызды экрандын бетине тийгизип, оңго жана солго жылдырыңыз.</string>
-  <string name="help_text_long"><b>Багыт тандоо</b>\nКийинки же мурунку бөлүмгө өтүү үчүн трэкболду тегеретиңиз же бармагыңызды экрандын бетине тийгизип, оңго жана сого жылдырыңыз.\n  \nТолук экрандан көрүүнү өчүрүү/күйгүзүү үчүн бармагыңызды экрандын бетине эки ирет тийгизин коюңуз.\n  \n\n<b>Иштизме</b>\n  \nТууралоого жана иштемге кирүү үчүн Иштизмеге кириңиз.\n  \nБиблияларды жана/же башка ресурстарды жүктөп алуу үчүн Иштизмени басыңыз. / Дагы / Ресурстарды жүктөп алуу \n  \n\n<b>Үндү бийиктетип угуу</b>\n  \nУгууну баштоо же токтотуу үчүн Иштизмекти басыңыз / Дагы/ Үндү бийиктетип угуу\n  \n\n<b>Жеке байкоолорум</b>\n  \nЖеке байкоолорумду кошумчалоо үчүн, аяттын контексттик иштизмегиндеги Жеке белгилериме кириңиз. Бар болгон чөпкаттарды карап чыгуу үчүн Иштизмекке кириңиз / Жеке байкоолорум.\n  \n\n<b>Чөпкаттар</b>\n  \nЧөпкаттарды кошумчалоо үчүн, аяттын контексттик иштизмегине кириңиз. Бар болгон чөпкаттарды карап чыгуу үчүн, Иштизмекке кириңиз. / Чөпкаттар. Иштизмекте чөпкаттарты жарлыктар (түркүмдөр) аркылуу топторго бөлсө болот.\n  \n\n<b>Издөө</b>\n  \n Издөөдө *, ?, AND, OR, NOT (чоң тамга менен) сыяктуу символдор болушу мүмкүн. (кененирээк маалымат алуу үчүн интернеттен \"Apache Lucene - Query Parser Syntaх\" караңыз)\n  \n\n<b>Контексттик иштизмек</b>\n  \nКонтексттик иштизмекти ачуу үчүн экранды узак убакыт басыңыз. Библиянын текстин узак убакыт бассаңыз аяттын контексттик иштизмеги ачылат.\n  \nРесурс тизмесин узак убакыт басуу менен Ресурсту өчүрүп салууга же анын булагын карап көрүүгө болот.\n  \nИшбаянды карап көрүү үчүн Артка деген басмакты узак убакыт басыңыз.</string>
+  <string name="help_text_long"><b>Багыт тандоо</b>\nКийинки же мурунку бөлүмгө өтүү үчүн трэкболду тегеретиңиз же бармагыңызды экрандын бетине тийгизип, оңго жана солго жылдырыңыз.\n  \nТолук экрандан көрүүнү өчүрүү/күйгүзүү үчүн бармагыңызды экрандын бетине эки ирет тийгизин коюңуз.\n  \n\n<b>Иштизме</b>\n  \nТууралоого жана иштемге кирүү үчүн Иштизмеге кириңиз.\n  \nБиблияларды жана/же башка ресурстарды жүктөп алуу үчүн Иштизмени басыңыз. / Дагы / Ресурстарды жүктөп алуу \n  \n\n<b>Үндү бийиктетип угуу</b>\n  \nУгууну баштоо же токтотуу үчүн Иштизмени басыңыз / Дагы/ Үндү бийиктетип угуу\n  \n\n<b>Жеке байкоолорум</b>\n  \nЖеке байкоолорумду кошумчалоо үчүн, аяттын контексттик иштизмегиндеги Жеке белгилериме кириңиз. Бар болгон чөпкаттарды карап чыгуу үчүн Иштизмекке кириңиз / Жеке байкоолорум.\n  \n\n<b>Чөпкаттар</b>\n  \nЧөпкаттарды кошумчалоо үчүн, аяттын контексттик иштизмегине кириңиз. Бар болгон чөпкаттарды карап чыгуу үчүн, Иштизмеге кириңиз. / Чөпкаттар. Иштизмеде чөпкаттарты жарлыктар (түркүмдөр) аркылуу топторго бөлсө болот.\n  \n\n<b>Издөө</b>\n  \n Издөөдө *, ?, AND, OR, NOT чоң тамга сыяктуу символдор болушу мүмкүн. Кененирээк маалымат алуу үчүн интернеттен \"Apache Lucene - Query Parser Syntaх\" караңыз.\n  \n\n<b>Контексттик иштизме</b>\n  \nКонтексттик иштизмени ачуу үчүн экранды узак убакыт басыңыз. Библиянын текстин узак убакыт бассаңыз аяттын контексттик иштизмеги ачылат.\n  \nРесурс тизмесин узак убакыт басуу менен Ресурсту өчүрүп салууга же анын булагын карап көрүүгө болот.\n  \nИшбаянды карап көрүү үчүн Артка деген басмакты узак убакыт басыңыз</string>
   <string name="version_text">Версия %s</string>
   <string name="no_sdcard_error">SD картаны салып, Библияны кайрадан ачыңыз.</string>
   <!--main menu-->
   <string name="chooseBook">Ресурстар</string>
-  <string name="selectPassage">Библия</string>
+  <string name="selectPassage">Үзүндү</string>
   <string name="search">Издөө</string>
   <string name="settings">Тууралоо</string>
   <string name="history">Ишбаян</string>
@@ -22,7 +22,7 @@
   <!--Search-->
   <string name="search_index">Издөө индекси</string>
   <string name="index_creation_required">Издөө үчүн индекс керек \nИндексти Интернеттен жүктөп алууга же колдо түзүп алууга болот.\nЖүктөп алуу ылдам болот, ошондой эле жүктөп алынган индекстердин издөө иштеми көбүрөөк болот. \nИндекстерди жүктөп алуу үчүн, Интернетке кошулуңуз.</string>
-  <string name="indexing_wait_msg">ИнСөздөрдү табуудекстерди түзүү аяктаганда издөө экраны пайда болот.</string>
+  <string name="indexing_wait_msg">Сөздөрдү табуу Индекстерди түзүү аяктаганда издөө экраны пайда болот.</string>
   <string name="index">Индекс</string>
   <string name="index_download">Жүктөө</string>
   <string name="index_not_available_for_download">Бул индексти жүктөп алуу мүмкүн эмес.</string>
@@ -149,8 +149,12 @@
   <string name="bookmark_labels">Жарлыктар</string>
   <string name="assign_labels">Жарлыкты бекитүү</string>
   <string name="new_label">Жаңы жарлык</string>
-  <string name="new_label_prompt">Дать название Атоо</string>
+  <string name="label_name_prompt">Аталыш</string>
   <string name="label_unlabelled">Жарлык өчүрүлдү</string>
+  <string name="rename">Аталышты өзгөртүү</string>
+  <!--Sort orders used for Bookmarks and MyNotes-->
+  <string name="sort_by_date">Дата боюнча</string>
+  <string name="sort_by_bible_book">Библиялык китептердин ирээти боюнча</string>
   <!--Dictionary-->
   <string name="dictionary">Сөздүк</string>
   <string name="search_dictionary_hint">Сөздүктөн издөө</string>
