--- a/AndBible/res/values-zh-rTW/strings.xml
+++ b/AndBible/res/values-zh-rTW/strings.xml
@@ -149,8 +149,12 @@
   <string name="bookmark_labels">書簽標簽</string>
   <string name="assign_labels">分配標簽</string>
   <string name="new_label">新標簽</string>
-  <string name="new_label_prompt">標簽名稱</string>
+  <string name="label_name_prompt">標簽名稱</string>
   <string name="label_unlabelled">沒有標簽</string>
+  <string name="rename">重命名</string>
+  <!--Sort orders used for Bookmarks and MyNotes-->
+  <string name="sort_by_date">日期順序</string>
+  <string name="sort_by_bible_book">聖經書序</string>
   <!--Dictionary-->
   <string name="dictionary">字典</string>
   <string name="search_dictionary_hint">查詢字典</string>
